[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/trap_atiradora.png" type="Texture" id=1]
[ext_resource path="res://scenes/trap_atiradora.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -8, -8, 8, -8, 8, 8, -8, 8, -8, 6, -2.66666, 4, -2.66666, 1.33334, -8, -1.33333 )

[node name="trap_atiradora" type="Area2D"]
position = Vector2( 150, 57 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 6
collision_mask = 5
script = ExtResource( 2 )

[node name="col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="position_shoot" type="Position2D" parent="."]
position = Vector2( -2.96284, 2.60979 )

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="timer_tiro" type="Timer" parent="."]
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[connection signal="timeout" from="timer_tiro" to="." method="_on_timer_tiro_timeout"]
